--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-<html>
 <head>
-    <title>Advertisement Display</title>
+    <title>Capstone Project</title>
+    <meta name="keywords" content="OpenCV, Advertisement, Marketing" />
+    <meta name="title" content="Capstone Project" />
+    <meta name="description" content =" Personalised Advertisement"/>
+    <link rel="stylesheet"  href="/styles.css"/>
 </head>
 <body>
-  <h1> Hello World </h1>
+  <h1> Personalised Advertisement using Computer Vision</h1>
+  <h2>Current Object:</h2>
+  <table><tr><th>Object Detected</th></tr><tr><td>Beard</td></tr></table>
+  <h2>Advertisement fetched from the pool:</h2>
+  <table><tr><th>...........</th></tr><tr><td>.....</td></tr></table>
 </body>
+</html>
