--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
-<head>
+<html lang="en">
+  <head>
     <title>Capstone Project</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta name="keywords" content="OpenCV, Advertisement, Marketing" />
     <meta name="title" content="Capstone Project" />
     <meta name="description" content =" Personalised Advertisement"/>
@@ -12,5 +19,7 @@
   <table><tr><th>Object Detected</th></tr><tr><td>Beard</td></tr></table>
   <h2>Advertisement fetched from the pool:</h2>
   <table><tr><th>...........</th></tr><tr><td>.....</td></tr></table>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js" integrity="sha512-quHCp3WbBNkwLfYUMd+KwBAgpVukJu5MncuQaWXgCrfgcxCJAq/fo+oqrRKOj+UKEmyMCG3tb8RB63W+EmrOBg==" crossorigin="anonymous"></script>
+  <script src="./features.js"></script>
 </body>
 </html>
