--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 <body>
   <h1> Personalised Advertisement using Computer Vision</h1>
   <h2>Facial Detection Model Running:</h2>
-  <table><tr><th colspan="6">Facial Attributes Detected </th></tr><tr><td>Bearded</td><td>Bangs</td><td>Eyeglasses</td><td>Young</td><td>Attractive</td></tr></table>
+  <!-- <table><tr><th colspan="6">Facial Attributes Detected </th></tr><tr><td>Bearded</td><td>Bangs</td><td>Eyeglasses</td><td>Young</td><td>Attractive</td></tr></table> -->
+  <table>
+    <tr><td><label for="age">Age Detected:</label></td><td><input type="text" name="age" placeholder="Your age"/></td></tr>
+    <tr><td><label for="gender">Gender Detected:</label></td><td><input type="text" name="gender" placeholder="Your Gender"/></td></tr>
+    <tr><td><label for="attributes">Attributes Detected:</label></td><td><div id="attributes"></div></td></tr>
+  </table>
   <h2>Advertisement fetched from the pool:</h2>
   <p>Advertisement Displayed for the tag <a id="attribute" href=""></a></p>
   <div id="box">
